--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.0.3",
         "nodemailer": "^6.9.3",
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
         "pigcolor": "^1.0.4",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "uuidv4": "^6.2.13"
     }
 }
