--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "jsonwebtoken": "^9.0.1",
+        "jwt-decode": "^3.1.2",
         "mongoose": "^7.0.3",
         "nodemailer": "^6.9.3",
         "nodemon": "^2.0.22",
