--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "connect-mongodb-session": "^3.1.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
