--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "js-base64": "^3.7.5",
         "jsonwebtoken": "^9.0.1",
         "jwt-decode": "^3.1.2",
         "mongoose": "^7.0.3",
