--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.4.0",
         "base-64": "^1.0.0",
         "body-parser": "^1.20.2",
         "connect-mongodb-session": "^3.1.1",
